created hero and first two sections

--- a/index.html
+++ b/index.html
@@ -21,27 +21,59 @@
       src="https://kit.fontawesome.com/fcaffe541a.js"
       crossorigin="anonymous"
     ></script>
-
-    <style>
-      .sekhmet-intro {
-        max-width: 80%;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="hero">
-        <h1>
-          Hello, I'm <br />
-          Sekhmet
-        </h1>
-      </div>
+    <div class="container navbar">
+      <nav>
+        <ul class="d-flex">
+          <li>
+            <a href="/" class="active text-decoration-none" title="Home"
+              >Home</a
+            >
+          </li>
+          <li>
+            <a href="/about.html" class="text-decoration-none" title="About"
+              >About</a
+            >
+          </li>
+          <li>
+            <a href="/work.html" class="text-decoration-none" title="Work"
+              >Work</a
+            >
+          </li>
+          <li>
+            <a href="/contact.html" class="text-decoration-none" title="Contact"
+              >Contact</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="container-fluid">
+      <section class="hero">
+        <div class="row">
+          <div class="hero-title col-6">
+            <h1>
+              Meow! Hi, I'm <br />
+              <strong class="sekhmet-title">Sekhmet</strong>
+            </h1>
+          </div>
+          <div class="col-6">
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/231/original/316167132_543423110623484_3995958705709893671.jpg?1670080127"
+              alt="Tabby cat"
+              class="sekhmet-hero img-fluid"
+            />
+          </div>
+        </div>
+      </section>
       <div class="introduction">
         <h2>Who am I?</h2>
         <div class="row">
           <div class="col-6">
             <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/227/original/317147029_679720236988555_7437596501580799912_n.png?1670078879"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/251/original/317147029_679720236988555_7437596501580799912_n.png?1670090895"
               class="sekhmet-intro img-fluid"
               alt="tabby cat profile"
             />
@@ -60,10 +92,15 @@
         </div>
       </div>
       <div class="like">
-        <h2>What do I like to do?</h2>
+        <h2>What I like to do</h2>
 
         <div class="row">
-          <div class="col-4">
+          <div class="col-4 orange">
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/223/original/317708777_1221933492003064_6160457316090516455_n.jpg?1670078854"
+              alt=""
+              class="img-fluid"
+            />
             <p>
               "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -71,16 +108,26 @@
               nisi ut aliquip ex ea commodo consequat.
             </p>
           </div>
-          <div class="col-4">
+          <div class="col-4 white">
             <p>
               "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat.
             </p>
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/254/original/317708777_122193349203064_6160457316090516455_n.jpg?1670091891"
+              alt=""
+              class="img-fluid"
+            />
           </div>
 
-          <div class="col-4">
+          <div class="col-4 orange">
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/255/original/317708777_1221933492003064_616045731609051645_n.jpg?1670091898"
+              alt=""
+              class="img-fluid"
+            />
             <p>
               "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
