--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
         </div>
       </section>
       <div class="introduction">
-        <h2>Who am I?</h2>
         <div class="row">
           <div class="col-6">
             <img
@@ -79,6 +78,8 @@
             />
           </div>
           <div class="col-6">
+            <h2>Meow you doin’?</h2>
+
             <p>
               "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
