--- a/index.html
+++ b/index.html
@@ -32,23 +32,32 @@
       <nav>
         <ul class="d-flex">
           <li>
-            <a href="/" class="active text-decoration-none" title="Home"
-              >Home</a
+            <a href="#intro" class="active text-decoration-none" title="About"
+              ><strong>About me</strong></a
             >
           </li>
           <li>
-            <a href="/about.html" class="text-decoration-none" title="About"
-              >About</a
+            <a
+              href="#like"
+              class="text-decoration-none"
+              title="What I like to do"
+              ><strong>What I like to do</strong></a
             >
           </li>
           <li>
-            <a href="/work.html" class="text-decoration-none" title="Work"
-              >Work</a
+            <a href="#catwalk" class="text-decoration-none" title="Catwalk"
+              ><strong>Catwalk</strong></a
             >
           </li>
           <li>
-            <a href="/contact.html" class="text-decoration-none" title="Contact"
-              >Contact</a
+            <a href="#food" class="text-decoration-none" title="Food"
+              ><strong>My favourite food</strong></a
+            >
+          </li>
+
+          <li>
+            <a href="#contact" class="text-decoration-none" title="Contact"
+              ><strong>Contact</strong></a
             >
           </li>
         </ul>
@@ -72,7 +81,7 @@
           </div>
         </div>
       </section>
-      <div class="introduction">
+      <div class="introduction" id="intro">
         <div class="row">
           <div class="col-6">
             <img
@@ -96,7 +105,7 @@
           </div>
         </div>
       </div>
-      <div class="like">
+      <div class="like" id="like">
         <h2>What I like to do</h2>
 
         <div class="row">
@@ -142,7 +151,7 @@
           </div>
         </div>
       </div>
-      <div class="catwalk">
+      <div class="catwalk" id="catwalk">
         <h2>Catwalk</h2>
         <p>
           "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -175,7 +184,7 @@
           </div>
         </div>
       </div>
-      <div class="food">
+      <div class="food" id="food">
         <h2>My favourite food</h2>
         <div class="row">
           <div class="col-6">
@@ -186,14 +195,58 @@
               nisi ut aliquip ex ea commodo consequat.
             </p>
           </div>
-          <div class="col-6">img</div>
+          <div class="col-6">
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/344/original/316738761_542728654048788_8452493424038432754_n.png?1670168348"
+              alt="sekhmet eating"
+              class="img-fluid"
+            />
+          </div>
         </div>
       </div>
-      <div class="footer">
-        <h3>Do you want to work with my mommy?</h3>
-        <h3>ilaria.vilardi7@gmail.com</h3>
+      <div class="contact" id="contact">
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/354/original/Untitled4.png?1670170206"
+              class="sekhmet-intro img-fluid"
+              alt="tabby cat profile"
+            />
+          </div>
+          <div class="col-6 contact-info">
+            <div class="contact-details">
+              <h3>Do you want to work with my mommy?</h3>
+              <h3>ilaria.vilardi7@gmail.com</h3>
+              <div class="social-links mt-3 d-flex justify-content-center">
+                <a href="https://twitter.com/VilardiIlaria" title="Twitter"
+                  ><i class="fa-brands fa-twitter"></i>
+                </a>
+
+                <a
+                  href="https://www.linkedin.com/in/ilaria-vilardi-1aa6056a/"
+                  title="Linkedin"
+                  ><i class="fa-brands fa-linkedin"></i
+                ></a>
+                <a href="https://github.com/Yeobie" title="Github">
+                  <i class="fa-brands fa-github"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <small>Copyright</small>
+      <div class="credits">
+        <p class="text-center me-0">
+          This is an
+          <a
+            href="https://github.com/Yeobie/Responsive-Portfolio-Project"
+            class="text-decoration-none"
+            title="My Github repository"
+            >open-source project</a
+          >
+          created by Ilaria Vilardi.
+        </p>
+      </div>
     </div>
   </body>
 </html>
