added first buttons and improved contact section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
               Meow! Hi, I'm <br />
               <strong class="sekhmet-title">Sekhmet</strong>
             </h1>
+            <div class="buttons">
+              <button class="primary">My gallery</button>
+              <button class="secondary">My mommy</button>
+            </div>
           </div>
           <div class="col-6">
             <img
@@ -206,17 +210,19 @@
       </div>
       <div class="contact" id="contact">
         <div class="row">
-          <div class="col-6">
+          <div class="col-5">
             <img
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/354/original/Untitled4.png?1670170206"
-              class="sekhmet-intro img-fluid"
-              alt="tabby cat profile"
+              class="sekhmet-contact img-fluid"
+              alt="tabby cat"
             />
           </div>
-          <div class="col-6 contact-info">
+          <div class="col-7 contact-info">
             <div class="contact-details">
-              <h3>Do you want to work with my mommy?</h3>
-              <h3>ilaria.vilardi7@gmail.com</h3>
+              <h3 class="contact-title">Do you want to work with my mommy?</h3>
+              <a href="mailto:ilaria.vilardi7@gmail.com"
+                >ilaria.vilardi7@gmail.com</a
+              >
               <div class="social-links mt-3 d-flex justify-content-center">
                 <a href="https://twitter.com/VilardiIlaria" title="Twitter"
                   ><i class="fa-brands fa-twitter"></i>
@@ -239,12 +245,18 @@
         <p class="text-center me-0">
           This is an
           <a
-            href="https://github.com/Yeobie/Responsive-Portfolio-Project"
+            href="https://github.com/Yeobie/Pet-landing-page"
             class="text-decoration-none"
             title="My Github repository"
             >open-source project</a
           >
-          created by Ilaria Vilardi.
+          created by Ilaria Vilardi and
+          <a
+            href="#"
+            class="text-decoration-none"
+            title="Pet landing page on Netlify"
+            >hosted on Netlify.</a
+          >
         </p>
       </div>
     </div>
