changed positioning of social links

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
               <a href="mailto:ilaria.vilardi7@gmail.com"
                 >ilaria.vilardi7@gmail.com</a
               >
-              <div class="social-links mt-3 d-flex justify-content-center">
+              <div class="social-links mt-3 d-flex">
                 <a href="https://twitter.com/VilardiIlaria" title="Twitter"
                   ><i class="fa-brands fa-twitter"></i>
                 </a>
