Started creating responsiveness

--- a/index.html
+++ b/index.html
@@ -73,7 +73,13 @@
             </h1>
             <div class="buttons">
               <button class="primary">My gallery</button>
-              <button class="secondary">My mommy</button>
+              <button class="secondary">
+                <a
+                  href="https://www.linkedin.com/in/ilaria-vilardi-1aa6056a/"
+                  title="Linkedin profile"
+                  >My mommy</a
+                >
+              </button>
             </div>
           </div>
           <div class="col-6">
