Added Netlify link

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
           >
           created by Ilaria Vilardi and
           <a
-            href="#"
+            href="https://petlandingpage-ilariavilardi.netlify.app/"
             class="text-decoration-none"
             title="Pet landing page on Netlify"
             >hosted on Netlify.</a
