started implementing responsiveness for smartphone

--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
       </section>
       <div class="introduction" id="intro">
         <div class="row">
-          <div class="col-5">
+          <div class="col-5 d-none d-md-block">
             <img
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/251/original/317147029_679720236988555_7437596501580799912_n.png?1670090895"
               class="sekhmet-intro img-fluid"
               alt="tabby cat profile"
             />
           </div>
-          <div class="col-7">
+          <div class="col">
             <h2>Meow you doin’?</h2>
 
             <p>
