Fixed some more responsiveness

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <h2>What I like to do</h2>
 
         <div class="row">
-          <div class="col-4 orange">
+          <div class="col-md-4 orange">
             <img
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/223/original/317708777_1221933492003064_6160457316090516455_n.jpg?1670078854"
               alt="cat on a scratching tree on a balcony"
@@ -132,7 +132,7 @@
               nisi ut aliquip ex ea commodo consequat.
             </p>
           </div>
-          <div class="col-4 white">
+          <div class="col-md-4 white">
             <p>
               "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -146,7 +146,7 @@
             />
           </div>
 
-          <div class="col-4 orange">
+          <div class="col-md-4 orange">
             <img
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/255/original/317708777_1221933492003064_616045731609051645_n.jpg?1670091898"
               alt="cat in a cat hammock hanged on a heater"
@@ -170,14 +170,14 @@
           aliquip ex ea commodo consequat.
         </p>
         <div class="row">
-          <div class="col-4">
+          <div class="col-md-4">
             <img
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/226/original/316738765_504928618252045_1332063821431237436_n.jpg?1670078872"
               alt="cat with kimono-like jacket"
               class="img-fluid"
             />
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             <img
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/220/original/316585042_1198402191019860_8482672976234146989_n.jpg?1670078827"
               alt="cat with bandana"
@@ -185,7 +185,7 @@
             />
           </div>
 
-          <div class="col-4">
+          <div class="col-md-4">
             <img
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/225/original/313367989_1706282979742440_6949757821767201377_n.jpg?1670078865"
               alt="cat with hoodie and sunglasses"
@@ -197,7 +197,7 @@
       <div class="food" id="food">
         <h2>My favourite food</h2>
         <div class="row">
-          <div class="col-7">
+          <div class="col-md-7">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -205,7 +205,7 @@
               nisi ut aliquip ex ea commodo consequat.
             </p>
           </div>
-          <div class="col-5">
+          <div class="col-md-5">
             <img
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/344/original/316738761_542728654048788_8452493424038432754_n.png?1670168348"
               alt="sekhmet eating"
@@ -216,17 +216,17 @@
       </div>
       <div class="contact" id="contact">
         <div class="row">
-          <div class="col-4">
+          <div class="col-md-4 d-none d-md-block">
             <img
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/354/original/Untitled4.png?1670170206"
               class="sekhmet-contact img-fluid"
               alt="tabby cat"
             />
           </div>
-          <div class="col-8 contact-info">
+          <div class="col-md-8 contact-info">
             <div class="contact-details">
               <h3 class="contact-title">Do you want to work with my mommy?</h3>
-              <a href="mailto:ilaria.vilardi7@gmail.com"
+              <a href="mailto:ilaria.vilardi7@gmail.com" class="email"
                 >ilaria.vilardi7@gmail.com</a
               >
               <div class="social-links mt-3 d-flex">
