--- a/index.html
+++ b/index.html
@@ -104,13 +104,19 @@
             <h2>Meow you doin’?</h2>
 
             <p>
-              "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-              sunt in culpa qui officia deserunt mollit anim id est laborum."
+              Hello! My name is Sekhmet, I'm a 4.5 years old tabby cat. She
+              named me after an Egyptian goddess although I'm a guy, haha!
+              <br />
+              I <strong>love</strong> cuddles and I especially love when they
+              rub my belly. Many cats don't like that, but I start purring so
+              much if you do that! I also love giving little head bumps or nose
+              bumps to show my affection. I'm very shy with people I don't know,
+              so if a stranger comes home you'll definitely see me running to
+              hide under the bed! But after a while I'll gain my courage and
+              become confident enough to get out and try to get to know that new
+              person. So all in all I'm not so different from the majority of
+              cats... But my mommy believes that I'm the cutest cat ever and she
+              covers me with kisses and cuddles!
             </p>
           </div>
         </div>
