--- a/index.html
+++ b/index.html
@@ -28,41 +28,56 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container navbar">
-      <nav>
-        <ul class="d-flex">
-          <li>
-            <a href="#intro" class="active text-decoration-none" title="About"
-              ><strong>About me</strong></a
-            >
-          </li>
-          <li>
-            <a
-              href="#like"
-              class="text-decoration-none"
-              title="What I like to do"
-              ><strong>What I like to do</strong></a
-            >
-          </li>
-          <li>
-            <a href="#catwalk" class="text-decoration-none" title="Catwalk"
-              ><strong>Catwalk</strong></a
-            >
-          </li>
-          <li>
-            <a href="#food" class="text-decoration-none" title="Food"
-              ><strong>My favourite food</strong></a
-            >
-          </li>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><i class="fas fa-paw"></i></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="#intro" class="active text-decoration-none" title="About"
+                ><strong>About me</strong></a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                href="#like"
+                class="text-decoration-none"
+                title="What I like to do"
+                ><strong>What I like to do</strong></a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="#catwalk" class="text-decoration-none" title="Catwalk"
+                ><strong>Catwalk</strong></a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="#food" class="text-decoration-none" title="Food"
+                ><strong>My favourite food</strong></a
+              >
+            </li>
 
-          <li>
-            <a href="#contact" class="text-decoration-none" title="Contact"
-              ><strong>Contact</strong></a
-            >
-          </li>
-        </ul>
-      </nav>
-    </div>
+            <li class="nav-item">
+              <a href="#contact" class="text-decoration-none" title="Contact"
+                ><strong>Contact</strong></a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <div class="container-fluid">
       <section class="hero">
         <div class="row">
@@ -71,7 +86,7 @@
               Meow! Hi, I'm <br />
               <strong class="sekhmet-title">Sekhmet</strong>
             </h1>
-            <div class="buttons">
+            <div class="buttons d-flex">
               <button class="primary">My gallery</button>
               <button class="secondary">
                 <a
@@ -104,19 +119,18 @@
             <h2>Meow you doin’?</h2>
 
             <p>
-              Hello! My name is Sekhmet, I'm a 4.5 years old tabby cat. She
-              named me after an Egyptian goddess although I'm a guy, haha!
+              Hello! My name is Sekhmet, I'm a 4.5 years old tabby cat. My mommy
+              named me after an Egyptian goddess although I'm a boy, haha!
               <br />
               I <strong>love</strong> cuddles and I especially love when they
-              rub my belly. Many cats don't like that, but I start purring so
-              much if you do that! I also love giving little head bumps or nose
-              bumps to show my affection. I'm very shy with people I don't know,
-              so if a stranger comes home you'll definitely see me running to
-              hide under the bed! But after a while I'll gain my courage and
-              become confident enough to get out and try to get to know that new
-              person. So all in all I'm not so different from the majority of
-              cats... But my mommy believes that I'm the cutest cat ever and she
-              covers me with kisses and cuddles!
+              rub my belly. I start purring so much if you do that! I also love
+              giving little head or nose bumps to show my affection. I'm very
+              shy with people I don't know, so if a stranger comes home you'll
+              definitely see me running to hide under the bed! But after a while
+              I'll gain my courage and become confident enough to get out and
+              try to get to know them. So all in all I'm not so different from
+              the majority of cats... But my mommy believes that I'm the cutest
+              cat ever and she covers me with kisses and cuddles!
             </p>
           </div>
         </div>
