Added text in the paragraphs

--- a/index.html
+++ b/index.html
@@ -146,18 +146,20 @@
               class="img-fluid"
             />
             <p>
-              "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              My most favourite thing ever is to sit on my former scratching
+              tree that mommy put on the balcony. It's the perfect place to have
+              a view on the world, and especially to look at the birds... I love
+              it so much that no matter the weather, even with the rain or the
+              snow I have to go there!
             </p>
           </div>
           <div class="col-md-4 white">
             <p>
-              "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              When the weather is nice, mommy puts a harness and a leash on me
+              and she brings me to some big park with lots of grass and trees.
+              If I feel confident enough, I like exploring the area and munching
+              the grass... but since I'm shy with other people around, it really
+              needs to be an isolated area for me to do it!
             </p>
             <img
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/254/original/317708777_122193349203064_6160457316090516455_n.jpg?1670091891"
@@ -173,10 +175,11 @@
               class="img-fluid"
             />
             <p>
-              "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              I'm a cat, so obviously my most favourite thing ever is sleeping.
+              Mommy attached a cat hammock on the heater, so during the winter,
+              when the heating is on, that area becomes so warm and comfy. I
+              could sleep there the whole day, and sometimes you'll find me
+              lying in there in the most funny positions, like in this picture!
             </p>
           </div>
         </div>
@@ -184,10 +187,16 @@
       <div class="catwalk" id="catwalk">
         <h2>Catwalk</h2>
         <p>
-          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
+          I'm also... a model?! Well, every now and then my mommy gets me some
+          fancy clothing to take cute pictures of me. Some examples are a
+          kimono-like shirt she got in Japan, a very cool bandana with my name
+          that she got from
+          <a
+            href="https://bastethebestest.jimdofree.com/my-brand/"
+            title="Mr.Bandana"
+            target="_blank"
+            >Mr.Bandana</a
+          >, and a pair of sunglasses with a hoodie! :3
         </p>
         <div class="row">
           <div class="col-md-4">
@@ -219,10 +228,13 @@
         <div class="row">
           <div class="col-md-7">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
+              I absolutely love chicken! So of course I'll totally eat whatever
+              chicken-based food you'll give me. But I also like fish, so my
+              mommy can manage to keep my diet varied between different
+              flavours. My favourite food brand ever is Catz Fine Foood.
+              Whenever she opens one of those cans, no matter if I'm sleeping or
+              whatever: I'll immediately recognize the sound and run there to
+              enjoy that delicious food!
             </p>
           </div>
           <div class="col-md-5">
@@ -246,20 +258,31 @@
           <div class="col-md-8 contact-info">
             <div class="contact-details">
               <h3 class="contact-title">Do you want to work with my mommy?</h3>
-              <a href="mailto:ilaria.vilardi7@gmail.com" class="email"
+              <a
+                href="mailto:ilaria.vilardi7@gmail.com"
+                class="email"
+                target="_blank"
                 >ilaria.vilardi7@gmail.com</a
               >
               <div class="social-links mt-3 d-flex">
-                <a href="https://twitter.com/VilardiIlaria" title="Twitter"
+                <a
+                  href="https://twitter.com/VilardiIlaria"
+                  title="Twitter"
+                  target="_blank"
                   ><i class="fa-brands fa-twitter"></i>
                 </a>
 
                 <a
                   href="https://www.linkedin.com/in/ilaria-vilardi-1aa6056a/"
                   title="Linkedin"
+                  target="_blank"
                   ><i class="fa-brands fa-linkedin"></i
                 ></a>
-                <a href="https://github.com/Yeobie" title="Github">
+                <a
+                  href="https://github.com/Yeobie"
+                  title="Github"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-github"></i>
                 </a>
               </div>
@@ -274,6 +297,7 @@
             href="https://github.com/Yeobie/Pet-landing-page"
             class="text-decoration-none"
             title="My Github repository"
+            target="_blank"
             >open-source project</a
           >
           created by Ilaria Vilardi and
@@ -281,6 +305,7 @@
             href="https://petlandingpage-ilariavilardi.netlify.app/"
             class="text-decoration-none"
             title="Pet landing page on Netlify"
+            target="_blank"
             >hosted on Netlify.</a
           >
         </p>
