--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
               I absolutely love chicken! So of course I'll totally eat whatever
               chicken-based food you'll give me. But I also like fish, so my
               mommy can manage to keep my diet varied between different
-              flavours. My favourite food brand ever is Catz Fine Foood.
-              Whenever she opens one of those cans, no matter if I'm sleeping or
+              flavours. My favourite food brand ever is Catz Fine Food. Whenever
+              she opens one of those cans, no matter if I'm sleeping or
               whatever: I'll immediately recognize the sound and run there to
               enjoy that delicious food!
             </p>
