Fixed hover of logo

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 
       .fa-paw {
         font-size: 40px;
-        color: var(--primary-color);
+        color: var(--secondary-color);
+      }
+
+      .fa-paw:hover {
       }
       .navbar ul {
         margin-bottom: 0px;
